kararudolph published a site update

--- a/causal_mediation.tex
+++ b/causal_mediation.tex
@@ -622,14 +622,13 @@ Linux's \passthrough{\lstinline!apt!}} or
   starting medication in inpatient treatment settings.
 \item
   An analysis of potential moderators of medication effectiveness found that
-  homeless individuals had a lower risk of relapse on XRNTX, whereas
+  homeless individuals had a lower risk of relapse on XR-NTX, whereas
   non-homeless individuals had a lower risk of relapse on BUP-NX.
 \item
   The effect sizes were similarly large for these groups but in opposite
   directions.
 \item
-  The underlying mechanisms for these differences have not yet been explored. We
-  can to identify these mechanisms by using mediation analysis.
+  We can to use mediation analysis to explore the mechanisms underlying these differences.
 \item
   Key questions:
 
@@ -829,8 +828,8 @@ model} (NPSEM), also known as \emph{structural causal model} (SCM):
   contrary to fact
 \end{itemize}
 
-\hypertarget{we-will-constantly-use-the-following-counterfactual-variables}{%
-\subsection*{We will constantly use the following counterfactual variables:}\label{we-will-constantly-use-the-following-counterfactual-variables}}
+\hypertarget{we-will-use-the-following-counterfactual-variables}{%
+\subsection*{We will use the following counterfactual variables:}\label{we-will-use-the-following-counterfactual-variables}}
 
 
 \begin{itemize}
