kararudolph published a site update

--- a/causal_mediation.tex
+++ b/causal_mediation.tex
@@ -1338,18 +1338,25 @@ mediator-outcome relationship (e.g., adherence)?}
 \end{figure}
 
 However:
-- We can actually actually identify the NIE/NDE in the above setting if we are
-willing to invoke monotonicity between a treatment and one or more binary
-treatment-induced confounders \citep{tchetgen2014identification}.
-- Assuming monotonicity is also sometimes referred to as assuming ``no
-defiers''---in other words, assuming that there are no individuals who would
-do the opposite of the encouragement.
-- Monotonicity may seem like a restrictive assumption, but may be reasonable in
-some common scenarios (e.g., in trials where the intervention is randomized
-treatment assignment and the treatment-induced confounder is whether or not
-treatment was actually taken--in this setting, we may feel comfortable
-assuming that there are no ``defiers'', frequently assumed when using IVs to
-identify causal effects)
+
+\begin{itemize}
+\tightlist
+\item
+  We can actually actually identify the NIE/NDE in the above setting if we are
+  willing to invoke monotonicity between a treatment and one or more binary
+  treatment-induced confounders \citep{tchetgen2014identification}.
+\item
+  Assuming monotonicity is also sometimes referred to as assuming ``no
+  defiers''---in other words, assuming that there are no individuals who would
+  do the opposite of the encouragement.
+\item
+  Monotonicity may seem like a restrictive assumption, but may be reasonable in
+  some common scenarios (e.g., in trials where the intervention is randomized
+  treatment assignment and the treatment-induced confounder is whether or not
+  treatment was actually taken--in this setting, we may feel comfortable
+  assuming that there are no ``defiers'', frequently assumed when using IVs to
+  identify causal effects)
+\end{itemize}
 
 Note: CDEs are still identified in this setting. They can be identified and
 estimated similarly to a longitudinal data sructure with a two-time-point
