--- a/causal_mediation.tex
+++ b/causal_mediation.tex
@@ -1839,7 +1839,7 @@ estimator:
 
 \begin{equation*}
 \underbrace{\frac{1}{n} \sum_{i=1}^n \frac{A_i}{\hat{\P}(A_i=1 \mid W_i)}
-Y_i}_{\text{IPW estimator}} +
+Y_i}_{\text{IPW estimator}} -
 \underbrace{\frac{1}{n} \sum_{i=1}^n \frac{\hat{\E}(Y \mid A_i=1, W_i)}
   {\hat{\P}(A_i=1 \mid W_i)}[A_i - \hat{\P}(A_i=1 \mid
   W_i)]}_{\text{Correction term}}
@@ -1855,12 +1855,19 @@ or
 \end{equation*}
 
 This estimator has some desirable properties:
-- It is robust to misspecification of at most one of the models (outcome or
-treatment) (Q: can you see why?)
-- It is distributed as a normal random variable as sample size grows. This
-allows us to easily compute confidence intervals and do hypothesis tests
-- It allows us to use machine learning to estimate the treatment and outcome
-regressions to alleviate model misspecification bias
+
+\begin{itemize}
+\tightlist
+\item
+  It is robust to misspecification of at most one of the models (outcome or
+  treatment) (Q: can you see why?)
+\item
+  It is distributed as a normal random variable as sample size grows. This
+  allows us to easily compute confidence intervals and do hypothesis tests
+\item
+  It allows us to use machine learning to estimate the treatment and outcome
+  regressions to alleviate model misspecification bias
+\end{itemize}
 
 Next, we will work towards constructing estimators with these same properties
 for the mediation parameters that we have introduced.
@@ -2087,13 +2094,13 @@ distribution \(\P\)
 \item
   The parameter functional for the NDE can also be expressed as a combination of
   regression and weighting:
-  \[\E\bigg[\color{RoyalBlue}{\bigg\{\frac{\I(A=0)}{\P(A=0\mid W)}\bigg\}}
+  \[\E\bigg[\color{RoyalBlue}{\frac{\I(A=0)}{\P(A=0\mid W)}}
     \times \color{Goldenrod}{\E(Y \mid A=1, M, W) -
     \E(Y \mid A=0, M, W)}\bigg]\]
 \item
   Thus, you can also construct a weighted estimator as
-  \[\frac{1}{n} \sum_{i=1}^n \bigg[\color{RoyalBlue}{ \bigg\{
-    \frac{\I(A_i=0)}{\hat{\P}(A_i=0\mid W_i)}\bigg\}} \times
+  \[\frac{1}{n} \sum_{i=1}^n \bigg[\color{RoyalBlue}{ 
+    \frac{\I(A_i=0)}{\hat{\P}(A_i=0\mid W_i)}} \times
     \color{Goldenrod}{\hat{\E}(Y \mid A=1, M_i, W_i) -
     \hat{\E}(Y \mid A=0, M_i, W_i)}\bigg]\]
 \end{itemize}
