--- a/causal_mediation.tex
+++ b/causal_mediation.tex
@@ -2094,13 +2094,13 @@ distribution \(\P\)
 \item
   The parameter functional for the NDE can also be expressed as a combination of
   regression and weighting:
-  \[\E\bigg[\color{RoyalBlue}{\frac{\I(A=0)}{\P(A=0\mid W)}}
+  \[\E\bigg[\color{RoyalBlue}{\bigg\{\frac{\I(A=0)}{\P(A=0\mid W)}\bigg\}}
     \times \color{Goldenrod}{\E(Y \mid A=1, M, W) -
     \E(Y \mid A=0, M, W)}\bigg]\]
 \item
   Thus, you can also construct a weighted estimator as
-  \[\frac{1}{n} \sum_{i=1}^n \bigg[\color{RoyalBlue}{ 
-    \frac{\I(A_i=0)}{\hat{\P}(A_i=0\mid W_i)}} \times
+  \[\frac{1}{n} \sum_{i=1}^n \bigg[\color{RoyalBlue}{ \bigg\{
+    \frac{\I(A_i=0)}{\hat{\P}(A_i=0\mid W_i)}\bigg\}} \times
     \color{Goldenrod}{\hat{\E}(Y \mid A=1, M_i, W_i) -
     \hat{\E}(Y \mid A=0, M_i, W_i)}\bigg]\]
 \end{itemize}
@@ -3027,9 +3027,9 @@ interv_de_onestep <- medoutcon(
 )
 summary(interv_de_onestep)
 #> # A tibble: 1 x 7
-#>   lwr_ci param_est upr_ci var_est  eif_mean estimator param                
-#>    <dbl>     <dbl>  <dbl>   <dbl>     <dbl> <chr>     <chr>                
-#> 1 -0.309     0.239  0.788  0.0782 -1.09e-15 onestep   direct_interventional
+#>   lwr_ci param_est upr_ci var_est eif_mean estimator param                
+#>    <dbl>     <dbl>  <dbl>   <dbl>    <dbl> <chr>     <chr>                
+#> 1 -0.309     0.239  0.788  0.0782 1.94e-15 onestep   direct_interventional
 \end{lstlisting}
 
 \begin{itemize}
@@ -3055,9 +3055,9 @@ interv_ie_onestep <- medoutcon(
 )
 summary(interv_ie_onestep)
 #> # A tibble: 1 x 7
-#>   lwr_ci param_est upr_ci var_est  eif_mean estimator param                  
-#>    <dbl>     <dbl>  <dbl>   <dbl>     <dbl> <chr>     <chr>                  
-#> 1  0.524      1.06   1.60  0.0758 -1.66e-15 onestep   indirect_interventional
+#>   lwr_ci param_est upr_ci var_est eif_mean estimator param                  
+#>    <dbl>     <dbl>  <dbl>   <dbl>    <dbl> <chr>     <chr>                  
+#> 1  0.524      1.06   1.60  0.0758 1.69e-16 onestep   indirect_interventional
 \end{lstlisting}
 
 \begin{itemize}
