--- a/06-estimation-code-walkthrough.Rmd
+++ b/06-estimation-code-walkthrough.Rmd
@@ -1,11 +1,13 @@
 # `R` packages for estimation of the causal (in)direct effects
 
-We'll now turn to working through a few examples of estimating the natural,
-interventional, and stochastic direct and indirect effects. As our running
+We'll now turn to working through a few examples of estimating natural and
+interventional direct and indirect effects. Note that we will be using the [medoutcon R package](https://github.com/nhejazi/medoutcon), but if your data scenario includes *multiple* mediators and *multiple* intermediate confounders, you should use the [HDmediation R package](https://github.com/nt-williams/HDmediation).
+
+As our running
 example, we'll a simple data set from an observational study of the relationship
 between BMI and kids' behavior, freely distributed with the [`mma` `R` package
 on CRAN](https://CRAN.R-project.org/package=mma). First, let's load the packages
-we'll be using and set a seed; then, load this data set and take a quick look
+we'll be using and set a seed; then, load this data set and take a quick look.
 
 ```{r setup}
 library(tidyverse)
