--- a/causal_mediation.tex
+++ b/causal_mediation.tex
@@ -3086,6 +3086,20 @@ methods in this workshop, here we provide a few references for further reading.
 This list is not meant to be comprehensive, just some of our own work and some
 work by others that we know and consider interesting.
 
+\hypertarget{mediation-with-multiple-mediators-and-multiple-intermediate-confounders}{%
+\section{Mediation with multiple mediators and multiple intermediate confounders}\label{mediation-with-multiple-mediators-and-multiple-intermediate-confounders}}
+
+Note that the \href{https://github.com/nhejazi/medoutcon}{medoutcon R package} works for multiple mediators but only a single, binary intermediate
+confounder. If your data scenario includes \emph{multiple} mediators and \emph{multiple} intermediate confounders, you should use the \href{https://github.com/nt-williams/HDmediation}{HDmediation R package}.
+
+\begin{itemize}
+\tightlist
+\item
+  \href{https://arxiv.org/abs/2212.08164}{Practical causal mediation analysis: extending nonparametric estimators to estimate the mediated effects of housing voucher receipt on adolescent risk behavior}
+  By Kara E. Rudolph,
+  Nicholas Williams, and Iván Díaz
+\end{itemize}
+
 \hypertarget{mediation-with-time-varying-treatments-mediators-and-covariates}{%
 \section{Mediation with time-varying treatments, mediators, and covariates}\label{mediation-with-time-varying-treatments-mediators-and-covariates}}
 
